// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserEditForm /> Should render correctly 1`] = `
<div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="uname_FORM_ID"
    >
      Display name
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Display name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="uname_FORM_ID"
        name="Display name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-dkzDqf bDLnRc sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="name_FORM_ID"
    >
      Real name
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Real name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="name"
        class="sc-papXJ cgekWF"
        id="name_FORM_ID"
        name="Real name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-dkzDqf bDLnRc sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="email_FORM_ID"
    >
      Email
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Email"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="email"
        class="sc-papXJ cgekWF"
        id="email_FORM_ID"
        name="Email"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-dkzDqf bDLnRc sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy forms__component forms__component__button"
      type="button"
    >
      <span
        class="button__child"
      >
        Update
      </span>
    </button>
  </div>
</div>
`;

exports[`<UserEditForm /> Should render correctly with admin controls shown 1`] = `
<div>
  <div
    class=""
  >
    <label
      class="forms__component forms__component__label"
      for="uname_FORM_ID"
    >
      Display name
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Display name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-papXJ cgekWF"
        id="uname_FORM_ID"
        name="Display name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-dkzDqf bDLnRc sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="name_FORM_ID"
    >
      Real name
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Real name"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="name"
        class="sc-papXJ cgekWF"
        id="name_FORM_ID"
        name="Real name"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-dkzDqf bDLnRc sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="forms__component forms__component__label"
      for="email_FORM_ID"
    >
      Email
    </label>
    <div
      class="sc-hKMtZM fMOyKb forms__component forms__component__text-box"
      placeholder="Email"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        autofill="email"
        class="sc-papXJ cgekWF"
        id="email_FORM_ID"
        name="Email"
        spellcheck="false"
        value=""
      />
      <svg
        class="sc-dkzDqf bDLnRc sc-jqUVSM hfMxIT"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-eCYdqJ hGxLib forms__component"
      id="admin_FORM_ID"
    >
      <div
        class="sc-jSMfEi gYtFJK"
      >
        <input
          aria-invalid="false"
          aria-label="Is admin"
          class="sc-gKXOVf XFKMS"
          name="Is admin"
          type="checkbox"
        />
        <svg
          class="sc-dkzDqf bDLnRc sc-iBkjds iaHuiq"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ftvSup jziudT"
      >
        Is admin
      </div>
    </label>
    <button
      class="button__outer button__outer--regular button__outer--no-bouncy forms__component forms__component__button"
      type="button"
    >
      <span
        class="button__child"
      >
        Update
      </span>
    </button>
  </div>
</div>
`;
